--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,30 @@ label {
     margin-bottom: 10px;
     color: #666666;
 }
+#how-to {
+    margin-top: 20px;
+    padding: 10px 20px;
 
+
+}
+ 
+
+#how-to button1 {
+    background-color: #903c8e; /* Deep purple */
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+#how-to button1:hover {
+    background-color: #a458b7; /* Lighter purple on hover */
+}
+ 
+
+ 
 input {
     width: calc(100% - 20px); /* Subtract padding from width */
     padding: 12px;
@@ -168,9 +191,8 @@ button:hover {
 }
  
 
-#go-back, #how-to {
-    margin-top: 20px;
-}
+
+ 
  
 #refresh {
     position: flex;
@@ -186,6 +208,3 @@ button:hover {
     'GRAD' 0,
     'opsz' 24
 }
- 
-
- 
